// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <div
    class="sc-Axmtr dXgRrs"
  >
    <button
      class="sc-AxhUy jiYFbt"
      size="2"
      type="button"
    />
    <ul
      class="sc-AxmLO lpkuxJ"
      data-testid="dropdown"
    />
  </div>
</div>
`;

exports[`renders dropdown 1`] = `
<div>
  <div
    class="sc-Axmtr dXgRrs"
  >
    <button
      class="sc-AxhUy jiYFbt"
      size="2"
      type="button"
    >
      <p
        class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
      >
        Example
      </p>
    </button>
    <ul
      class="sc-AxmLO jSGhjh"
      data-testid="dropdown"
    >
      <a
        class="sc-AxhCb fNYure"
        href="http://www.google.pl"
        size="2"
        target="_blank"
      >
        <test-file-stub
          classname="sc-AxgMl yaFjd"
        />
        <p
          class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
        >
          I open Google in new tab
        </p>
      </a>
    </ul>
  </div>
</div>
`;
